// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SceneContainer should render properly 1`] = `
<div
  className="scene-container panel"
>
  <Connect(Toolbar) />
  <Scene
    fullscreen={false}
  />
</div>
`;

exports[`SceneContainer should render properly if fullscreen 1`] = `
<div
  className="scene-container panel fullscreen"
>
  <Connect(Toolbar) />
  <Scene
    fullscreen={true}
  />
</div>
`;
